--- a/index.html
+++ b/index.html
@@ -1,98 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GLTECHCWB - Assistência Técnica Especializada</title>
-    <link rel="stylesheet" href="estilos.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GLTechCWB - Soluções em Tecnologia em Curitiba</title>
+  <meta name="description" content="A GLTechCWB oferece soluções em tecnologia, informática e suporte técnico em Curitiba. Atendimento rápido e confiável para empresas e clientes.">
+  <meta name="keywords" content="tecnologia Curitiba, GLTechCWB, informática, suporte técnico, TI, consultoria, manutenção de computadores, redes">
+  <meta name="author" content="GLTechCWB">
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph (Facebook, LinkedIn, WhatsApp) -->
+  <meta property="og:title" content="GLTechCWB - Tecnologia em Curitiba">
+  <meta property="og:description" content="Soluções em TI, suporte técnico e consultoria em tecnologia em Curitiba.">
+  <meta property="og:url" content="https://www.gltechcwb.com/">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://www.gltechcwb.com/imagens/capa.jpg">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="GLTechCWB - Tecnologia em Curitiba">
+  <meta name="twitter:description" content="Soluções em TI, suporte técnico e consultoria em Curitiba.">
+  <meta name="twitter:image" content="https://www.gltechcwb.com/imagens/capa.jpg">
 </head>
 <body>
-    <header>
-        <div class="logo-container">
-            <img src="image.png" alt="GL TECH CWB Logo" class="logo">
-            <div class="header-title">
-                <h1>GLTECHCWB</h1>
-                <span class="subtitle">Assistência Técnica Especializada</span>
-            </div>
-            
-        </div>
-        <nav>
-            <ul>
-    <ul>
-        <li><a href="index.html">Início</a></li>
-        <li><a href="eu.html">Eu</a></li>
-        <li><a href="sobre.html">Sobre</a></li>
-        <li><a href="produtos.html">Produtos</a></li>
-        <li><a href="#contato">Contato</a></li>
-    </ul>
-</nav>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section id="inicio">
-            <h2>Bem-vindo!</h2>
-            <p>Somos especialistas em assistência técnica. Conte com a GL TECH CWB para soluções rápidas e profissionais!</p>
-        </section>
-
-        <section id="sobre" class="card">
-            <h2>Sobre a empresa</h2>
-            <ul class="dados-empresa">
-                <li><strong>Nome:</strong> GLTechcwb</li>
-                <li><strong>Categoria:</strong> Suporte e serviços para computadores, Serviço de informática</li>
-                <li><strong>Descrição:</strong> Somos uma assistência técnica especializada em manutenção de computadores e notebooks. Vendemos peças, acessórios e periféricos. Estamos aqui para solucionar seus problemas e melhor atendê-los.</li>
-                <li><strong>Data de abertura:</strong> 1 de janeiro de 2022</li>
-                <li><strong>Local:</strong> R. Carneiro Lobo, 536 - Batel, Curitiba - PR, 80240-240</li>
-                <li><strong>Área de cobertura:</strong> Curitiba, PR, Brasil</li>
-                <li><strong>Identidade:</strong> Empresa de empreendedoras</li>
-                <li><strong>Serviços:</strong> Serviços disponíveis no local, oferece agendamento on-line</li>
-                <li><strong>Planejamento:</strong> Não é necessário fazer agendamento</li>
-            </ul>
-        </section>
-
-        <section id="servicos" class="card">
-            <h2>Serviços</h2>
-            <ul>
-                <li>Manutenção de Computadores e Notebooks</li>
-                <li>Reparo de Hardwares</li>
-                <li>Atualização de Softwares</li>
-                <li>Implantação de Redes</li>
-                <li>Venda de peças, acessórios e periféricos</li>
-                <li>Atendimento especializado</li>
-                <li>Agendamento on-line</li>
-            </ul>
-        </section>
-
-        <section id="horarios" class="card">
-            <h2>Horário de Funcionamento</h2>
-            <table>
-                <tr><td>Domingo:</td><td>Fechado</td></tr>
-                <tr><td>Segunda-feira:</td><td>09:00–17:00</td></tr>
-                <tr><td>Terça-feira:</td><td>09:00–17:00</td></tr>
-                <tr><td>Quarta-feira:</td><td>09:00–17:00</td></tr>
-                <tr><td>Quinta-feira:</td><td>09:00–17:00</td></tr>
-                <tr><td>Sexta-feira:</td><td>09:00–17:00</td></tr>
-                <tr><td>Sábado:</td><td>Fechado</td></tr>
-            </table>
-            <h3>Atendimento on-line</h3>
-            <table>
-                <tr><td>Segunda a Sexta:</td><td>08:00–16:00</td></tr>
-                <tr><td>Domingo e Sábado:</td><td>Não definido</td></tr>
-            </table>
-        </section>
-
-        <section id="contato" class="card">
-            <h2>Contato</h2>
-            <ul>
-                <li><strong>Telefone:</strong> <a href="tel:4130301240">(41) 3030-1240</a></li>
-                <li><strong>WhatsApp:</strong> <a href="https://wa.me/554130301240" target="_blank">Clique para conversar</a></li>
-                <li><strong>Site:</strong> <a href="https://www.gltechcwb.com/" target="_blank">www.gltechcwb.com</a></li>
-                <li><strong>Endereço:</strong> R. Carneiro Lobo, 536 - Batel, Curitiba - PR, 80240-240</li>
-            </ul>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2025 GL TECH CWB - Assistência Técnica Especializada</p>
-    </footer>
+  <h1>Bem-vindo à GLTechCWB</h1>
+  <p>Oferecemos soluções em tecnologia, suporte técnico e consultoria em TI em Curitiba.</p>
 </body>
 </html>
