--- a/eu.html
+++ b/eu.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GLTECHCWB - Assistência Técnica Especializada em Curitiba</title>
-  <meta name="description" content="GLTECHCWB - Assistência técnica em computadores, notebooks e produtos de informática em Curitiba.">
+  <title>Quem Sou Eu - GLTECHCWB</title>
+  <meta name="description" content="Conheça o responsável pela GLTECHCWB, experiência em tecnologia e assistência técnica em Curitiba.">
   <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
@@ -18,18 +18,18 @@
     </div>
     <nav>
       <ul>
-        <li><a href="index.html" class="active">Início</a></li>
-        <li><a href="eu.html">Eu</a></li>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="eu.html" class="active">Eu</a></li>
         <li><a href="sobre.html">Sobre</a></li>
         <li><a href="produtos.html">Produtos</a></li>
-        <li><a href="#contato">Contato</a></li>
+        <li><a href="index.html#contato">Contato</a></li>
       </ul>
     </nav>
   </header>
   <main>
     <section class="card">
-      <h2>Bem-vindo à GLTECHCWB</h2>
-      <p>Especialistas em manutenção, upgrades e venda de produtos de informática em Curitiba.</p>
+      <h2>Quem Sou Eu</h2>
+      <p>Meu nome é Gustavo Lourenço, especialista em manutenção de computadores, notebooks e consultoria em tecnologia. Tenho anos de experiência ajudando clientes a encontrar soluções rápidas e eficazes.</p>
     </section>
   </main>
   <footer>
