--- a/sobre.html
+++ b/sobre.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GLTECHCWB - Assistência Técnica Especializada em Curitiba</title>
-  <meta name="description" content="GLTECHCWB - Assistência técnica em computadores, notebooks e produtos de informática em Curitiba.">
+  <title>Sobre - GLTECHCWB</title>
+  <meta name="description" content="Saiba mais sobre a GLTECHCWB, assistência técnica especializada em Curitiba. Missão, valores e compromisso com o cliente.">
   <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
@@ -18,18 +18,18 @@
     </div>
     <nav>
       <ul>
-        <li><a href="index.html" class="active">Início</a></li>
+        <li><a href="index.html">Início</a></li>
         <li><a href="eu.html">Eu</a></li>
-        <li><a href="sobre.html">Sobre</a></li>
+        <li><a href="sobre.html" class="active">Sobre</a></li>
         <li><a href="produtos.html">Produtos</a></li>
-        <li><a href="#contato">Contato</a></li>
+        <li><a href="index.html#contato">Contato</a></li>
       </ul>
     </nav>
   </header>
   <main>
     <section class="card">
-      <h2>Bem-vindo à GLTECHCWB</h2>
-      <p>Especialistas em manutenção, upgrades e venda de produtos de informática em Curitiba.</p>
+      <h2>Sobre Nós</h2>
+      <p>A <strong>GLTECHCWB</strong> é uma empresa especializada em manutenção e venda de equipamentos de informática. Nosso compromisso é oferecer soluções rápidas e eficientes para nossos clientes em Curitiba e região.</p>
     </section>
   </main>
   <footer>
